added a sample demonstrating the invocation of java functions on the javascript environment inside the Android.Webkit.WebView.

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -1,6 +1,7 @@
 <html>
 <body>
 	<h1>HOWD!</h1>
-	<p>Hello World from Andruboid webview!</p>	
+	<p>Hello World from Andruboid webview!</p>
+	<input type="button" value="Say hello" onClick="javascript: document.write('obj=' + Android.getDirName());" />
 </body>
 </html>
