added example to call a javascript inside a page loaded on webview from mruby env.

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -1,7 +1,15 @@
 <html>
+<head>
+	<script>
+		function writeMsg() {
+			document.write("script called!");
+		}
+	</script>
+<head>
 <body>
 	<h1>HOWD!</h1>
 	<p>Hello World from Andruboid webview!</p>
 	<input type="button" value="Say hello" onClick="javascript: document.write('obj=' + Android.getDirName());" />
+	<input type="button" value="writeMsg()" onClick="writeMsg()" />
 </body>
 </html>
