added a call to an external javascript on the example.

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
+	<script src="test.js"></script>
 	<script>
 		function writeMsg() {
-			document.write("script called!");
+			document.write(" script called!");
 		}
 	</script>
 <head>
@@ -11,5 +12,6 @@
 	<p>Hello World from Andruboid webview!</p>
 	<input type="button" value="Say hello" onClick="javascript: document.write('obj=' + Android.getDirName());" />
 	<input type="button" value="writeMsg()" onClick="writeMsg()" />
+	<input type="button" value="writeFooMsg()" onClick="writeFooMsg()" />
 </body>
 </html>
