bridge between java runtime, html, e mruby

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -10,7 +10,7 @@
 <body>
 	<h1>HOWD!</h1>
 	<p>Hello World from Andruboid webview!</p>
-	<input type="button" value="Say hello" onClick="javascript: document.write('obj=' + Android.getDirName());" />
+	<input type="button" value="Say hello" onClick="javascript: document.write('obj=' + Android.setNumber());" />
 	<input type="button" value="writeMsg()" onClick="writeMsg()" />
 	<input type="button" value="writeFooMsg()" onClick="writeFooMsg()" />
 </body>
